<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.phonebank.ripplewallet.View_CameraPreview
        android:id="@+id/camerapreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_instruction" />

    <EditText
        android:id="@+id/edit_accountAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_account_address"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_scanAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_qr_reader" />

    <EditText
        android:id="@+id/edit_accountSecret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_account_secret"
        android:ems="10" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_login" />


</LinearLayout>