<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.phonebank.ripplewallet.View_CameraPreview
        android:id="@+id/camerapreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/label_PayTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_label_pay_to" />

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <EditText
        android:id="@+id/edit_destinationAddress"
		android:hint="@string/send_hint_ripple_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    
    <Button
        android:id="@+id/button_scanDestinationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_qr_reader" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_amountToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_label_amount_to_pay" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    <EditText
        android:id="@+id/edit_amount"
        android:hint="@string/send_hint_pay_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />
    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_cancel" />
    
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_confirm" />

    </LinearLayout>

</LinearLayout>